# open-ocharts-query

./: .gitignore  CMakeLists.txt  CS_home_pi_ChartsCopy_oeuSENC-ESmed.avcache  README.md  avnav.conf  notes  run-with-xvfb.sh
include/: HttpServer.h  OesuMiniReader.h  ocpn_plugin_shim.h
include/ocharts/: Osenc.h  OsencStubs.h  S57ClassRegistrar.h  bbox.h  color_types.h  mygeom.h  ocpn_plugin.h  s52s57.h  s57RegistrarMgr.h  s57obj.h
provider/include/: Renderer.h
provider/include/ocpn-import/: ocpn_plugin.h
provider/include/requestHandler/: ChartRequestHandler.h  ListRequestHandler.h
provider/src/: ChartInfo.cpp  FPRFileProvider.cpp  Renderer.cpp  main.cpp
provider/src/ocpn-import/: pluginmanager.cpp
src/: HttpServer.cpp  OesuMiniReader.cpp  globals.cpp  main.cpp  ocpn_plugin_shim.cpp
src/ocharts/: Osenc.cpp  eSENCChart.cpp  mygeomOC.cpp  s57obj.cpp
